# gdrive-dedup

./: .env.example  .gitignore  ARCHITECTURE.md  BRANCHES.md  IMPLEMENTATION_SUMMARY.md  INSTALL_NOTES.md  README.md  USAGE.md  VIDEO_CLUSTERING.md  pyproject.toml
src/gdrive_dedup/: __init__.py  __main__.py
src/gdrive_dedup/actions/: __init__.py  batch.py  name_merger.py  strategies.py  trash.py
src/gdrive_dedup/analyzer/: embeddings.py  feature_extractors.py  frame_extractor.py
src/gdrive_dedup/auth/: oauth.py  service.py
src/gdrive_dedup/cli/: analyze_cmd.py  app.py  auth_cmd.py  cluster_cmd.py  config_cmd.py  delete_cmd.py  formatters.py  organize_cmd.py  report_cmd.py  review_cmd.py  scan_cmd.py
src/gdrive_dedup/clustering/: clusterer.py  metadata_similarity.py  similarity.py
src/gdrive_dedup/common/: constants.py  exceptions.py  logging.py  rate_limiter.py  retry.py
src/gdrive_dedup/config/: settings.py
src/gdrive_dedup/detector/: __init__.py  byte_pass.py  checksum_pass.py  models.py  pipeline.py  size_pass.py
src/gdrive_dedup/organizer/: cluster_organizer.py
src/gdrive_dedup/reporting/: __init__.py  exporter.py
src/gdrive_dedup/scanner/: __init__.py  drive_scanner.py  file_index.py  resume.py
tests/: conftest.py
tests/test_actions/: test_strategies.py
tests/test_detector/: test_models.py
