[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdrive-dedup"
version = "0.1.0"
description = "CLI tool to find and remove duplicate files in Google Drive"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "typer[all]>=0.9.0",
    "rich>=13.6.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "humanize>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[project.scripts]
gdrive-dedup = "gdrive_dedup.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gdrive_dedup"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/gdrive_dedup --cov-report=term-missing"
